fixs product page "plus more" bug and implements correct alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,16 @@
-html,
+html {
+  height: 100vh;
+}
+
 body {
-  height: 100%;
+  min-height: 100vh;
 }
 
 #root {
-  height: 100%;
+  min-height: 100vh;
 
   > div {
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
   }
